--- a/ui/rubi.finance/src/template.ejs
+++ b/ui/rubi.finance/src/template.ejs
@@ -1,21 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title><%= htmlWebpackPlugin.options.title %></title>
-  <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
-  <meta name="format-detection" content="telephone=no">
-  <meta name="msapplication-tap-highlight" content="no">
-  <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
-</head>
-<body>
-  <div id="react-app"></div>
-  <%if (env.NODE_ENV === 'production') { %>
-  <script crossorigin src="https://unpkg.com/react@17.0.1/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.production.min.js"></script>
-  <% } else { %>
-  <script crossorigin src="https://unpkg.com/react@17.0.1/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.development.js"></script>
-  <% } %>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta
+      name="viewport"
+      content="initial-scale=1, width=device-width, viewport-fit=cover"
+    />
+  </head>
+  <body>
+    <style type="text/css">
+      body {
+        margin: 0px;
+      }
+    </style>
+    <div id="react-app"></div>
+    <%if (env.NODE_ENV === 'production') { %>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@17.0.1/umd/react.production.min.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.production.min.js"
+    ></script>
+    <% } else { %>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@17.0.1/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@17.0.1/umd/react-dom.development.js"
+    ></script>
+    <% } %>
+  </body>
 </html>
