--- a/ui/hedgepie.finance/styles/globals.css
+++ b/ui/hedgepie.finance/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Plus Jakarta Sans", sans-serif;
 }
 a {
   color: inherit;
